--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -11,15 +11,8 @@
     <h1>Iniciar sesión</h1>
     <form method="post">
         {% csrf_token %}
-        <div class="mb-3">
-            <label for="username" class="form-label">Usuario:</label>
-            <input type="text" id="username" name="username" class="form-control" required>
-        </div>
-        <div class="mb-3">
-            <label for="password" class="form-label">Contraseña:</label>
-            <input type="password" id="password" name="password" class="form-control" required>
-        </div>
-        <button type="submit" class="btn btn-primary">Iniciar sesión</button>
+        {{ form.as_p }}
+        <button type="submit">Iniciar sesión</button>
     </form>
 {% endblock %}
 
