css pagina home

--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -8,16 +8,13 @@
 {% endblock %}
 
 {% block main %}
-    <div class="welcome-container">
-        <div class="logo-circle">
-            <i>📊</i>
-        </div>
-    
+    <div class="container-sm">
+        
         <h1>Sistema de Calificaciones Tributarias de NUAM</h1>
         <p class="subtitle">Gestiona y consulta calificaciones de manera eficiente</p>
     
         <a href="{% url 'login' %}" class="btn btn-primary-custom">
-        Iniciar Sesión →
+            <button type="button" class="btn btn-outline-primary">Iniciar Cesion</button>
         </a>
     </div>
 
