--- a/core/templates/main.html
+++ b/core/templates/main.html
@@ -1,12 +1,11 @@
-{& extends 'base.html' &}
-{& block title &}
+{% extends 'base.html' %}
+{% block title %}
     <title>Main</title>
-{& endblock &}
+{% endblock %}
 
-{& block styles &}
-{& endblock &}
+{% block styles %}{% endblock %}
 
-{& block main &}
+{% block main %}
     <h1>Página principal</h1>
     <p>Contenido de la página principal.</p>
-{& endblock &}
+{% endblock %}
