--- a/core/templates/welcome.html
+++ b/core/templates/welcome.html
@@ -10,14 +10,10 @@
 {% endblock %}
 
 {% block main %}
-
-    <div class="container-sm welcome-hero">
+    <div class="container-sm container-hero">
         <h1>Sistema de Calificaciones Tributarias de NUAM</h1>
         <p class="subtitle">Gestiona y consulta calificaciones de manera eficiente</p>
 
-        <a href="{% url 'login' %}" class="btn btn-primary">
-            Iniciar Sesión
-        </a>
+        <a href="{% url 'login' %}" class="btn btn-primary">Iniciar Sesión</a>
     </div>
-
 {% endblock %}
