--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -10,23 +10,30 @@
     {% block styles %}{% endblock %}
 </head>
 <body>
-    <nav class="navbar border-bottom border-body">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">NUAM</a>
+<nav class="navbar border-bottom border-body">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="{% url 'welcome' %}">NUAM</a>
+        <div>
+            {% if user.is_authenticated %}
+                <a class="btn btn-sm btn-outline-secondary" href="{% url 'logout' %}">Cerrar sesión</a>
+            {% else %}
+                <a class="btn btn-sm btn-outline-primary" href="{% url 'login' %}">Entrar</a>
+            {% endif %}
         </div>
-    </nav>
-
-    <!-- mensajes de Django -->
-    <div class="container mt-3">
-      {% if messages %}
-        {% for msg in messages %}
-          <div class="alert alert-{{ msg.tags }}">{{ msg }}</div>
-        {% endfor %}
-      {% endif %}
     </div>
+</nav>
 
-    {% block main %}{% endblock %}
+<div class="container mt-3">
+  {% if messages %}
+    {% for msg in messages %}
+      <div class="alert alert-{{ msg.tags }}">{{ msg }}</div>
+    {% endfor %}
+  {% endif %}
+</div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+{% block main %}{% endblock %}
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
