--- a/core/templates/welcome.html
+++ b/core/templates/welcome.html
@@ -10,10 +10,11 @@
 {% endblock %}
 
 {% block main %}
-    <div class="container-sm container-hero">
+    <div class="welcome-card">
         <h1>Sistema de Calificaciones Tributarias de NUAM</h1>
         <p class="subtitle">Gestiona y consulta calificaciones de manera eficiente</p>
-
-        <a href="{% url 'login' %}" class="btn btn-primary">Iniciar Sesión</a>
+        <div class="welcome-actions">
+            <a href="{% url 'login' %}" class="btn btn-primary">Iniciar Sesión</a>
+        </div>
     </div>
 {% endblock %}
