--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -17,7 +17,9 @@
             {% if user.is_authenticated %}
                 <a class="btn btn-sm btn-outline-secondary" href="{% url 'logout' %}">Cerrar sesión</a>
             {% else %}
-                <a class="btn btn-sm btn-outline-primary" href="{% url 'login' %}">Entrar</a>
+                {% if request.path != '/' and request.path != '/login/' %}
+                    <a class="btn btn-sm btn-outline-primary" href="{% url 'login' %}">Entrar</a>
+                {% endif %}
             {% endif %}
         </div>
     </div>
