--- a/core/templates/main.html
+++ b/core/templates/main.html
@@ -240,7 +240,7 @@
         <div class="action-bar">
             <div class="action-buttons">
                 <button class="btn btn-danger">🗑️ Eliminar</button>
-                <button class="btn btn-secondary">📁 Carga Masiva</button>
+                <a href="{% url 'cargaMasiva' %}" class="btn btn-secondary">📁 Carga Masiva</a>
                 <a href="{% url 'cargaManual' %}" class="btn btn-success">➕ Ingresar</a>
                 <button class="btn btn-primary">✏️ Modificar</button>
             </div>
