--- a/core/templates/cargaManual.html
+++ b/core/templates/cargaManual.html
@@ -91,7 +91,7 @@
                     <div class="checkbox-group">
                         <label class="checkbox-label">
                             <input type="checkbox" id="isfut-si">
-                            <span>Acogido ISFUT/ISIFT</span>
+                            <span>Acogido ISFUT</span>
                         </label>
                     </div>
                 </div>
