--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -31,6 +31,7 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+{% block content %}{% endblock %}
 </body>
 </html>
 
